--- a/PWN/CallMe/Dockerfile
+++ b/PWN/CallMe/Dockerfile
@@ -1,3 +1,7 @@
+# sudo docker build -t callme .
+# sudo docker run -d -p 1024:1024 --rm -it callme
+# with the --rm, used, for deleting the container.
+
 FROM ubuntu:latest
 
 # Update system
